--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,3 +4,4 @@ rate_label_rate: Rate
 rate_label_rate_history: Rate History
 rate_label_new_rate: New Rate
 rate_label_currency: $
+rate_error_user_not_found: User not found
