--- a/lang/en.yml
+++ b/lang/en.yml
@@ -6,4 +6,4 @@ rate_label_new_rate: New Rate
 rate_label_currency: $
 rate_error_user_not_found: User not found
 rate_label_set_rate: Set Rate
-
+rate_label_default: Default Rate
