--- a/README.rdoc
+++ b/README.rdoc
@@ -13,10 +13,19 @@ A copy of the plugin can be downloaded from {Little Stream Software}[https://pro
 
 == Installation and Setup
 
+These installation instructions are very specific because the Rate plugin adjusts data inside the Budget plugin so several data intregrity checks are needed.
+
+0. Backup up your data! Backup your data!
 1. Follow the Redmine plugin installation steps at: http://www.redmine.org/wiki/redmine/Plugins  Make sure the plugin is installed to +vendor/plugins/redmine_rate+
-2. Run the plugin migrations +rake db:migrate_plugins+
-3. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
-4. TODO
+2. Make sure you are running the 0.1.0 version of the Budget plugin
+3. Run the pre_install_export to export your current budget data to file +rake rate_plugin:budget:pre_install_export+
+4. Run the plugin migrations +rake db:migrate_plugins+ in order to get the new tables for Rates
+5. Upgrade the budget plugin to 0.2.0
+6. Rerun the plugin migrations +rake db:migrate_plugins+ in order to update to Budget's 0.2.0 schema
+7. Run the post_install_check to check your exported data (from #3 above) against the new Rate data. +rake rate_plugin:budget:post_install_check+
+8. If the script reports no errors, proceed.  If errors are found, please file a bug report and revert to your backups
+9. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
+10. TODO
 
 == Usage
 
