--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,7 @@ The Rate plugin provides an API that can be used to find the rate for a Member o
 
 == Getting the plugin
 
-A copy of the plugin can be downloaded from {Little Stream Software}[https://projects.littlestreamsoftware.com/projects/list_files/redmine-rate] or from {GitHub}[http://github.com/edavis10/redmine_rate/tree/master]
+A copy of the plugin can be downloaded from {Little Stream Software}[https://projects.littlestreamsoftware.com/projects/redmine-rate/files] or from {GitHub}[http://github.com/edavis10/redmine_rate/tree/master]
 
 
 == Installation and Setup
@@ -82,5 +82,5 @@ This plugin is licensed under the GNU GPL v2.  See COPYRIGHT.txt and GPL.txt for
 
 == Project help
 
-If you need help you can contact the maintainer at his email address (See CREDITS.txt) or create an issue in the Bug Tracker.  The bug tracker is located at  https://projects.littlestreamsoftware.com
+If you need help you can contact the maintainer on the Bug Tracker.  The bug tracker is located at  https://projects.littlestreamsoftware.com
 
