[#4289] Ported the billing plugin's timesheet hooks.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,4 @@ en:
   rate_error_user_not_found: User not found
   rate_label_set_rate: Set Rate
   rate_label_default: Default Rate
+  rate_cost: Cost
