[#4604] Add an admin panel for the rate caches

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,5 @@ en:
   rate_label_set_rate: Set Rate
   rate_label_default: Default Rate
   rate_cost: Cost
+  text_rate_caches_panel: "Rate Caches"
+
