--- a/README.rdoc
+++ b/README.rdoc
@@ -12,6 +12,7 @@ The Rate plugin stores billable rates for Users.  It also provides an API that c
 * Rate.for API for other plugins
 * Integration with the Billing plugin
 * Integration with the Budget plugin
+* Integration with the Contracts plugin
 
 == Getting the plugin
 
@@ -27,25 +28,25 @@ There are two sets of steps to install this plugin.  The first one should be don
 These installation instructions are very specific because the Rate plugin adjusts data inside the Budget plugin so several data integrity checks are needed.
 
 0. Backup up your data! Backup your data!
-0. Install the Lockfile gem
-1. Follow the Redmine plugin installation steps a http://www.redmine.org/wiki/redmine/Plugins  Make sure the plugin is installed to +vendor/plugins/redmine_rate+
-2. Make sure you are running the 0.1.0 version of the Budget plugin and 0.0.1 version of the Billing plugin
-3. Run the pre_install_export to export your current budget and billing data to file +rake rate_plugin:pre_install_export+
-4. Run the plugin migrations +rake db:migrate_plugins+ in order to get the new tables for Rates
-5. Upgrade the budget plugin to 0.2.0 and the billing plugin to 0.3.0
-6. Rerun the plugin migrations +rake db:migrate_plugins+ in order to update to Budget's 0.2.0 schema
-7. Run the post_install_check to check your exported data (from #3 above) against the new Rate data. +rake rate_plugin:post_install_check+
-8. If the script reports no errors, proceed.  If errors are found, please file a bug report and revert to your backups
-9. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
-10. Setup the "View Rate" permission for any Role that should be allowed to see the user rates in a Project
+1. Install the Lockfile gem
+2. Follow the Redmine plugin installation steps a http://www.redmine.org/wiki/redmine/Plugins  Make sure the plugin is installed to +vendor/plugins/redmine_rate+
+3. Make sure you are running the 0.1.0 version of the Budget plugin and 0.0.1 version of the Billing plugin
+4. Run the pre_install_export to export your current budget and billing data to file +rake rate_plugin:pre_install_export+
+5. Run the plugin migrations +rake db:migrate_plugins+ in order to get the new tables for Rates
+6. Upgrade the budget plugin to 0.2.0 and the billing plugin to 0.3.0
+7. Rerun the plugin migrations +rake db:migrate_plugins+ in order to update to Budget's 0.2.0 schema
+8. Run the post_install_check to check your exported data (from #3 above) against the new Rate data. +rake rate_plugin:post_install_check+
+9. If the script reports no errors, proceed.  If errors are found, please file a bug report and revert to your backups
+10. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
+11. Setup the "View Rate" permission for any Role that should be allowed to see the user rates in a Project
 
 === Option #2: If you do not have any data from Budget or Billing
 
-0. Install the Lockfile gem
-1. Follow the Redmine plugin installation steps a http://www.redmine.org/wiki/redmine/Plugins  Make sure the plugin is installed to +vendor/plugins/redmine_rate+
-2. Run the plugin migrations +rake db:migrate_plugins+ in order to get the new tables for Rates
-3. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
-4. Setup the "View Rate" permission for any Role that should be allowed to see the user rates in a Project
+1. Install the Lockfile gem
+2. Follow the Redmine plugin installation steps a http://www.redmine.org/wiki/redmine/Plugins  Make sure the plugin is installed to +vendor/plugins/redmine_rate+
+3. Run the plugin migrations +rake db:migrate_plugins+ in order to get the new tables for Rates
+4. Restart your Redmine web servers (e.g. mongrel, thin, mod_rails)
+5. Setup the "View Rate" permission for any Role that should be allowed to see the user rates in a Project
 
 == Usage
 
@@ -77,6 +78,10 @@ A default rate is a user's Rate that doesn't correspond to a specific project.  
 === Lock a Rate
 
 Currently this feature is only available through the Rate API.  A Rate will become locked once a valid TimeEntry is assigned to the Rate.
+
+=== Caching
+
+The plugin includes some simple caching for time entries cost. Instead of doing a lookup for each time entry, the rate plugin will cache the total cost for each time entry to the database. The caching is done transparently but you can run and purge the caches from the Administration Panel or using the provided rate tasks (rake rate_plugin:update_cost_cache, rake rate_plugin:refresh_cost_cache).
 
 == License
 
